# oreboot

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  ENV  MAINTAINERS  Makefile  Makefile.inc  Makefile.mainboard.inc  Makefile.mode.debug.inc  Makefile.mode.release.inc  Makefile.qemu.inc  Makefile.renode.inc  Makefile.toml  News  README.md  azure-pipelines.yml  check_size.sh  dprint.json  graveyard.md  rust-toolchain  rust-toolchain.toml  rustfmt.toml
payloads/: Cargo.toml  Makefile  Makefile.toml  README.md
payloads/cbfs/: Cargo.toml
payloads/payload/: Cargo.toml  payload.rs  serialize.rs
payloads/src/: lib.rs  payload.rs
payloads/src/payload/: mod.rs  payload.rs
src.broken/mainboard/emulation/qemu-armv7/: Cargo.toml  Makefile
src.broken/mainboard/emulation/qemu-q35/: Cargo.toml  build.rs  link.ld
src/arch/: Cargo.toml  build.rs
src/arch/arm/armv7/: Cargo.toml
src/arch/arm64/armv8/: Cargo.toml
src/arch/ppc64/: Cargo.toml
src/arch/ppc64/src/: lib.rs
src/arch/riscv/: mod.rs
src/arch/riscv/rv32/: Cargo.toml
src/arch/riscv/rv64/: Cargo.toml
src/arch/src/: lib.rs
src/arch/src/armv7/: mmu.S  mod.rs
src/arch/src/armv8/: mod.rs
src/arch/src/ppc64/: mod.rs
src/arch/src/riscv32/: mod.rs
src/arch/src/riscv64/: mod.rs  util.rs  xuantie.rs
src/arch/src/x86_64/: bootblock_nomem.S  bzimage.rs  hlt.rs  ioport.rs  mmio.rs  mod.rs  mode_switch.S
src/arch/x86/x86_64/: Cargo.toml
src/cpu/: Cargo.toml
src/cpu/amd/: Cargo.toml  Makefile  lib.rs
src/cpu/amd/src/: lib.rs  model.rs
src/cpu/armltd/arm1176jz-s/: Cargo.toml  arm-unknown-none-eabi.json
src/cpu/armltd/cortex-a53/: Cargo.toml
src/cpu/armltd/cortex-a9/: Cargo.toml
src/cpu/lowrisc/ibex/: Cargo.toml
src/cpu/src/: lib.rs
src/cpu/src/armltd/: cortex_a53.rs  cortex_a9.rs  mod.rs
src/cpu/src/lowrisc/: ibex.rs  mod.rs
src/cpu/src/x86/: mod.rs  msr_access.rs  smm.rs
src/cpu/tests/: mod.rs
src/cpu/tests/x86/: mod.rs  msr_access.rs
src/drivers/: Cargo.toml
src/drivers/clock/: Cargo.toml
src/drivers/clock/src/: lib.rs
src/drivers/driver/: Cargo.toml  driver.rs
src/drivers/driver/src/: dod.rs  lib.rs
src/drivers/model/: Cargo.toml
src/drivers/model/src/: lib.rs  tests.rs
src/drivers/sifive/spi/: Cargo.toml
src/drivers/src/: clock.rs  context.rs  lib.rs  model.rs  wrappers.rs
src/drivers/src/elog/: mod.rs
src/drivers/src/spi/: adesto.rs  amic.rs  atmel.rs  cbfs_spi.rs  eon.rs  gigadevice.rs  macronix.rs  mod.rs  sifive.rs  spansion.rs  spi_flash.rs  spi_generic.rs  sst.rs  stmicro.rs  winbond.rs
src/drivers/src/timer/: mod.rs
src/drivers/src/uart/: amdmmio.rs  debug_port.rs  i8250.rs  log.rs  mod.rs  ns16550.rs  opentitan.rs  pl011.rs  sifive.rs  spi.rs  sunxi.rs
src/drivers/tests/: tests.rs
src/drivers/timer/: Cargo.toml
src/drivers/timer/src/: hpet.rs  lib.rs
src/drivers/uart/: Cargo.toml  pl011.rs
src/drivers/uart/src/: amdmmio.rs  aspeed.rs  debug_port.rs  i8250.rs  lib.rs  log.rs  npcm.rs  ns16550.rs  ns16550x32.rs  null.rs  opentitan.rs  pl011.rs  sifive.rs  spi.rs  sunxi.rs
src/drivers/wrappers/: Cargo.toml
src/drivers/wrappers/src/: lib.rs
src/drivers/wrappers/tests/: tests.rs
src/ec/: Cargo.toml
src/ec/src/: lib.rs
src/ec/src/google/: mod.rs
src/lib/acpi/: Cargo.toml
src/lib/acpi/src/: lib.rs
src/lib/device/: Cargo.toml
src/lib/device/src/: device_const.rs  device_util.rs  lib.rs  mmio.rs  path.rs  pci_type.rs  resource.rs  soundwire.rs
src/lib/device_tree/: Cargo.toml  device_tree.rs
src/lib/device_tree/src/: area.rs  lib.rs  test_device_tree
src/lib/device_tree/tests/: integration_test.rs
src/lib/log/: Cargo.toml
src/lib/log/src/: lib.rs
src/lib/payload/: Cargo.toml
src/lib/payload/src/: lib.rs  oreboot_tables.rs  pci.rs  sysinfo.rs
src/mainboard/: Cargo.toml
src/mainboard/aaeon/upsquared/: Cargo.toml  Makefile  fixed-dtfs.dts  link.ld
src/mainboard/aaeon/upxtreme/: Cargo.toml  Makefile  fixed-dtfs.dts  link.ld
src/mainboard/amd/romecrb/: Cargo.toml  Makefile  Makefile.inc  fixed-dtfs.dts  jmporeboot.S  link.ld  loop.S  patch.go  pt.go  start.S
src/mainboard/asrock/a300m-stx/: Cargo.toml  Makefile  build.sh  fixed-dtfs.dts  flash.sh  layout.txt  link.ld  patch.go  restore.sh  rustfmt.toml  serial.S  start.S  watchdog.md
src/mainboard/ast/ast25x0/: Cargo.toml  Makeefile.broken  Makefile  Makefile.toml  README.md  arm-none-eabihf.json  build.rs  fixed-dtfs.dts  link.ld  platins.S  trans.go
src/mainboard/canaan/canmv-k230/: Makefile
src/mainboard/emulation/: README.md
src/mainboard/emulation/qemu-aarch64/: Cargo.toml  Makefile  board.dts  fixed-dtfs.dts  link.ld
src/mainboard/emulation/qemu-armv7/: Cargo.toml  Makefile  Makefile.toml  arm-none-eabihf.json  fixed-dtfs.dts  link.ld
src/mainboard/emulation/qemu-fsp/: Cargo.toml  Makefile  fixed-dtfs.dts  link.ld
src/mainboard/emulation/qemu-fsp32/: Cargo.toml  Makefile  README.md  fixed-dtfs.dts  link.ld
src/mainboard/emulation/qemu-q35/: Cargo.toml  Makefile  Makefile.toml  bootblock.rs  fixed-dtfs.dts  link.ld
src/mainboard/emulation/qemu-riscv/: Cargo.toml  Makefile  Makefile.toml  QEMU.md  board.dts  build.rs  fixed-dtfs.dts  link.ld  memlayout.ld  oreboot.json  platform.dts
src/mainboard/emulation/riscv64/: Cargo.toml  Makefile.toml  kernel
src/mainboard/google/trembyle/: .gitignore  Cargo.toml  Makefile  Makefile.inc  fixed-dtfs.dts  link.ld  (+5 more)
src/mainboard/src/: lib.rs
src/soc/: Cargo.toml  README.md
src/soc/src/: lib.rs  starfive.rs
src/southbridge/: Cargo.toml
src/southbridge/src/: lib.rs
tools/layoutflash/: Cargo.toml
tools/layoutflash/data/: 16bytes  RomImage  fixed-dtfs.dtc  fixed-dtfs.dts
tools/layoutflash/src/: main.rs
xtask/: Cargo.toml  README.md
xtask/src/: dtfs.rs  gdb_detect.rs  main.rs  target.rs  util.rs
xtask/src/qemu/: aarch64.rs  mod.rs  riscv.rs
xtask/src/spacemit/: k1x.rs  k1x_hdr.rs  mod.rs
xtask/src/starfive/: mod.rs  visionfive1.rs  visionfive2.rs  visionfive2_hdr.rs
xtask/src/sunxi/: egon.rs  fel.rs  h616.rs  mod.rs  nezha.rs  xfel.rs
xtask/src/testdata/: test.dtb  test.dts
(+782 files in other folders)
