[workspace]
# in general, avoid wildcards, to make sure we get only what we want.
members = [
  "src/arch",
  "src/console",
  "src/cpu",
  "src/drivers",
  "src/ec",
  "src/soc",
  "src/southbridge",

  "src/lib/cbmem",
  "src/lib/consts",
  "src/lib/device",
  "src/lib/payload",
  "src/lib/romstage_handoff",
  "src/lib/types",
  "src/lib/util",

  "src/mainboard/sunxi/nezha/*",
  "src/mainboard/emulation/*",
  "src/vendorcode/fsp/build-utils",
  "src/vendorcode/fsp/common",

  "src/security",

  "xtask",

  "tools/layoutflash",
]
default-members = ["xtask"]

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true
# Leave debug symbol information on release compilation mode
# That's okay, these symbols won't appear on flash binary
debug = true

[profile.dev]
opt-level = 1 # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.
lto = true
