[workspace]
# in general, avoid wildcards, to make sure we get only what we want.
members = [
  "src/arch",
  "src/console",
  "src/cpu",
  "src/soc",

  "src/lib/compression",
  "src/lib/consts",
  "src/lib/log",
  "src/lib/util",
  "src/lib/layoutflash",

  "src/mainboard/starfive/visionfive1/*",
  "src/mainboard/starfive/visionfive2/*",
  "src/mainboard/sunxi/nezha/*",
  "src/mainboard/emulation/*/*",

  "xtask",
]
default-members = ["xtask"]
resolver = "2"

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true
# Leave debug symbol information on release compilation mode
# That's okay, these symbols won't appear on flash binary
debug = true

[profile.dev]
opt-level = 1 # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.
lto = true
