[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1"
clap = { version = "4.4", features = ["derive"] }
clap-verbosity-flag = "2.0"
crc = "*"
ctrlc = "3.2"
env_logger = "0.9"
fdt = "0.1.4"
log = "0.4"
miniz_oxide = "0.8.5"
pathdiff = "0.2"

layoutflash = { path = "../src/lib/layoutflash", features = ["std"] }
