[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1"
cargo_toml = "0.22.3"
clap = { version = "4.4", features = ["derive"] }
clap-verbosity-flag = "2.0"
config = "0.15.18"
crc = "*"
ctrlc = "3.2"
env_logger = "0.9"
fdt = "0.1.4"
log = "0.4"
miniz_oxide = "0.8.5"
pathdiff = "0.2"

layoutflash = { path = "../src/lib/layoutflash" }
