[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
clap-verbosity-flag = "2.0"
ctrlc = "3.2"
env_logger = "0.9"
log = "0.4"

# files and formats
cargo_toml = "0.22.3"
config = "0.15.18"
fdt = "0.1.4"
miniz_oxide = "0.8.5"
pathdiff = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# bit/byte manipulation, crypto and hashing
byteorder = "1"
crc = "*"
zerocopy = "0.8.27"
zerocopy-derive = "0.8.27"

layoutflash = { path = "../src/lib/layoutflash", features = ["std"] }
