[package]
name = "oreboot-arch"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
log = { path = "../lib/log" }

# RISC-V
riscv = { version = "=0.12.1", features = ["critical-section-single-hart"] }
rustsbi = { version = "=0.4.0", features = ["machine"] }
sbi-rt = { version = "=0.0.3", features = ["integer-impls"] }
sbi-spec = { version = "=0.0.7", features = ["legacy"] }

[features]
riscv64 = []
