[package]
name = "oreboot-drivers"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
consts = { path = "../lib/consts"}
tock-registers = "0.7.0"
vcell = "0.1.3"
# Heapless does not build for rv32imc.
heapless = { version = "0.6.1", optional = true }

[features]
spi_sifive = []
timer_hpet = []
uart_i8250 = ["heapless"]
uart_amdmmio = []
uart_pl011 = []
uart_ns16550 = []
uart_spi = []
uart_sifive = []
uart_sunxi = []
uart_log = ["heapless"]
uart_opentitan = []
uart_debug_port = ["timer_hpet"]
