[package]
name = "oreboot-soc"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
acpi = { path = "../lib/acpi" }
consts = { path = "../lib/consts" }
device = { path = "../lib/device" }
fsp-apl = { path = "../vendorcode/fsp/apollolake", package = "fsp-apl-sys", optional = true }
oreboot-arch = { path = "../arch", optional = true }
oreboot-cpu = { path = "../cpu", optional = true }
tock-registers = "0.7.0"
types = { path = "../lib/types" }

arch = { package = "oreboot-arch", path = "../arch", optional = true }
heapless = { version = "0.7.16", optional = true }
raw-cpuid = { version = "9.0.0", optional = true }
payload = { path = "../lib/payload" }
security = { package = "oreboot-security", path = "../security" }
util = { path = "../lib/util", optional = true }
vcell = { version = "0.1.3", optional = true }

d1-pac = { version = "0.0.30", features = ["critical-section"], optional = true }
embedded-hal = { version = "1.0.0-alpha.8", optional = true }
nb = "1"
spin = "0.9.4"

[features]
amd = [
  "util",
  "raw-cpuid",
  "heapless",
  "vcell",
]
intel = ["arch/x86_64", "oreboot-cpu/intel"]
apollolake = ["intel", "fsp-apl"]
geminilake = ["intel", "util", "fsp-apl"]
sunxi = []
sunxi_d1 = ["sunxi", "d1-pac", "embedded-hal"]
