[package]
name = "oreboot-soc"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
consts = { path = "../lib/consts" }
oreboot-arch = { path = "../arch", optional = true }
oreboot-cpu = { path = "../cpu", optional = true }
tock-registers = "0.7.0"

heapless = { version = "0.7.16", optional = true }
raw-cpuid = { version = "9.0.0", optional = true }
util = { path = "../lib/util", optional = true }
vcell = { version = "0.1.3", optional = true }

d1-pac = { version = "0.0.30", features = ["critical-section"], optional = true }
embedded-hal = { version = "1.0.0-alpha.8", optional = true }
nb = "1"

[features]
amd = [
  "util",
  "raw-cpuid",
  "heapless",
  "vcell",
]
sunxi = []
sunxi_d1 = ["sunxi", "d1-pac", "embedded-hal"]
