[package]
name = "oreboot-soc"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
consts = { path = "../lib/consts" }
log = { path = "../lib/log", optional = true }
oreboot-arch = { path = "../arch", optional = true }
oreboot-cpu = { path = "../cpu", optional = true }
util = { path = "../lib/util", optional = true }

# crates from crates.io
embedded-hal = { version = "1.0.0-alpha.9", optional = true }
embedded-hal-nb = { version = "1.0.0-alpha.1", optional = true }
embedded-sdmmc = { version = "0.5.0", optional = true }
heapless = { version = "0.7.16", optional = true }
nb = "1"
raw-cpuid = { version = "10.6.0", optional = true }
tock-registers = "0.8.1"
vcell = { version = "0.1.3", optional = true }

# PACs for difference SoCs
d1-pac = { version = "0.0.31", features = ["critical-section"], optional = true }

# HALs for different SoCs
jh71xx-hal = { version = "0.1", features = ["rt"], optional = true }

[features]
amd = [
  "util",
  "raw-cpuid",
  "heapless",
  "vcell",
]
sunxi = []
sunxi_d1 = ["sunxi", "d1-pac", "embedded-hal", "embedded-hal-nb", "embedded-sdmmc", "log"]
starfive = []
starfive_jh7110 = ["starfive", "embedded-hal-nb", "jh71xx-hal", "log"]
