[package]
name = "layoutflash"
version = "0.1.0"
authors = ["Ryan O'Leary <ryanoleary@google.com>"]
edition = "2021"

[dependencies]
device_tree = { path = "../../src/lib/device_tree" }
model = { path = "../../src/drivers/model" }
wrappers = { path = "../../src/drivers/wrappers" }
clap = { git = "https://github.com/clap-rs/clap" }
