[package]
name = "uart"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2018"

[profile.release]
opt-level = 'z'  # Optimize for size.

[dependencies]
model = { path = "../model"}
clock = { path = "../clock"}
register = "0.3.2"
x86_64 = "0.8.3"

# Heapless does not build for rv32imc.
[dependencies.heapless]
optional = true

[features]
pl011 = []
ns16550 = []
sifive = []
log = []
opentitan = []
i8250 = []