[package]
name = "uart"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[profile.release]
opt-level = 'z'  # Optimize for size.

[dependencies]
consts = { path = "../../lib/consts"}
model = { path = "../model"}
clock = { path = "../clock"}
timer = { path = "../timer"}
tock-registers = "0.7.x"
# Heapless does not build for rv32imc.
heapless = { version = "0.4.4", optional = true }

[features]
i8250 = ["heapless"]
amdmmio = []
pl011 = []
ns16550 = []
sifive = []
log = ["heapless"]
opentitan = []
debug_port = []
