[package]
name = "acpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
romstage_handoff = { path = "../romstage_handoff" }
southbridge = { path = "../../southbridge", optional = true }

[features]
intel = ["southbridge"]
