[package]
name = "device_tree"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2018"

[dependencies]
byteorder = { version = "1", default-features = false }
model = { path = "../../drivers/model"}
num-derive = { version = "0.2", default-features = false }
num-traits = { version = "0.2", default-features = false }
print = { path = "../../lib/print" }
wrappers = { path = "../../drivers/wrappers"}

[profile.release]
opt-level = 'z'  # Optimize for size.
