[package]
name = "device_tree"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
byteorder = { version = "1", default-features = false }
num-derive = { version = "0.2", default-features = false }
num-traits = { version = "0.2", default-features = false }
heapless = "0.6.1"
