[package]
name = "payload"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch = { package = "oreboot-arch", path = "../../arch" }
types = { path = "../../lib/types" }
util = { path = "../../lib/util" }
spin = "0.9.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
arch = { package = "oreboot-arch", path = "../../arch", features = ["x86_64"] }
