[package]
name = "qemu-q35"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
console = { path = "../../../console" }
payloads = { path = "../../../../payloads" }
print = { path = "../../../lib/print" }

heapless = "0.7.16"
postcard = "0.7.3"
static-ref = "0.1.1"

[dependencies.oreboot-arch]
path = "../../../arch"
features = ["x86_64"]

[dependencies.oreboot-drivers]
path = "../../../drivers"
features = ["uart_i8250", "uart_debug_port"]
