[package]
name = "arch"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2018"

[dependencies]
model = { path = "../../../drivers/model" }
print = { path = "../../../lib/print" }
util = { path = "../../../lib/util" }
wrappers = { path = "../../../drivers/wrappers"}

[profile.release]
opt-level = 'z'  # Optimize for size.

[features]
ioport = []
bzimage = []
acpi = []
pci = []
