[package]
name = "arch"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
consts = { path= "../../../lib/consts" }
model = { path = "../../../drivers/model" }
print = { path = "../../../lib/print" }
util = { path = "../../../lib/util" }
wrappers = { path = "../../../drivers/wrappers"}
vcell = "0.1.2"

[profile.release]
opt-level = 'z'  # Optimize for size.

[features]
ioport = []
bzimage = []
acpi = []
