[package]
name = "upsquared"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
console = { path = "../../../console" }
print = { path = "../../../lib/print" }
payloads = { path = "../../../../payloads"}

heapless = "0.4.x"
static-ref = "0.1.1"
postcard = "0.4.3"

[dependencies.oreboot-arch]
path = "../../../arch"
features = ["x86_64"]

[dependencies.oreboot-drivers]
path = "../../../drivers"
features = ["uart_i8250", "uart_debug_port"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
