[package]
name = "upsquared"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
console = { path = "../../../console" }
print = { path = "../../../lib/print" }
payloads = { path = "../../../../payloads"}

heapless = "0.6.1"
static-ref = "0.1.1"
postcard = "0.7.3"

[dependencies.oreboot-arch]
path = "../../../arch"
features = ["x86_64"]

[dependencies.oreboot-drivers]
path = "../../../drivers"
features = ["uart_i8250", "uart_debug_port"]
