[package]
name = "upxtreme"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
arch = { path = "../../../arch/x86/x86_64"}
console = { path = "../../../console" }
fsp-cfl-sys = { path = "../../../vendorcode/fsp/coffeelake"}
fsp-common = { path = "../../../vendorcode/fsp/common"}
model = { path = "../../../drivers/model" }
payloads = { path = "../../../../payloads"}
print = { path = "../../../lib/print" }
uefi = { path = "../../../lib/uefi"}
wrappers = { path = "../../../drivers/wrappers"}

static-ref = "0.1.1"
postcard = "0.4.3"

[dependencies.uart]
path = "../../../drivers/uart"
features = ["i8250", "debug_port"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
