[package]
name = "upxtreme"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
console = { path = "../../../console" }
fsp-cfl-sys = { path = "../../../vendorcode/fsp/coffeelake"}
fsp-common = { path = "../../../vendorcode/fsp/common"}
payloads = { path = "../../../../payloads"}
print = { path = "../../../lib/print" }
uefi = { path = "../../../lib/uefi"}

static-ref = "0.1.1"
postcard = "0.7.3"

[dependencies.oreboot-arch]
path = "../../../arch"
features = ["x86_64"]

[dependencies.oreboot-drivers]
path = "../../../drivers"
features = ["uart_i8250", "uart_debug_port"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
