[package]
name = "a300m-stx"
version = "0.1.0"
authors = ["oreboot Authors"]
edition = "2021"

[dependencies]
console = { path = "../../../console" }
consts = { path="../../../lib/consts"}
cpu = { path = "../../../cpu/amd" }
pci = { path = "../../../soc/amd/common/pci" }
print = { path = "../../../lib/print" }
payloads = { path = "../../../../payloads" }
smn = { path = "../../../soc/amd/common/smn" }
soc = { path = "../../../soc/amd/picasso" }
util = { path = "../../../lib/util" }

heapless = "0.4.x"
raw-cpuid = "9.0.0"
static-ref = "0.1.1"
postcard = "0.7.3"
vcell = "0.1.3"
x86_64 = "0.14.8"

[dependencies.oreboot-arch]
path = "../../../arch"
features = ["x86_64"]

[dependencies.oreboot-drivers]
path = "../../../drivers"
features = ["uart_i8250", "uart_amdmmio"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
