[package]
name = "ast25x0"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
console = { path = "../../../console" }
payloads = { path = "../../../../payloads"}
device_tree = { path = "../../../lib/device_tree" }
print = { path = "../../../lib/print" }
static-ref = "0.1.1"

[dependencies.oreboot-arch]
path = "../../../arch"
features = ["armv7"]

[dependencies.oreboot-cpu]
path = "../../../cpu"
features = ["armltd_cortex_a9"]

[dependencies.oreboot-soc]
path = "../../../soc"
features = ["aspeed_ast25x0"]

[dependencies.oreboot-drivers]
path = "../../../drivers"
features = ["uart_ns16550"]
