[package]
name = "qemu-aarch64"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
console = { path = "../../../console" }
consts = { path="../../../lib/consts"}
cpu = { path = "../../../cpu/armltd/cortex-a53"}
device_tree = { path = "../../../lib/device_tree" }
print = { path = "../../../lib/print" }
payloads = { path = "../../../../payloads"}

[dependencies.oreboot-drivers]
path = "../../../drivers"
features = ["uart_pl011"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
