[package]
name = "qemu-aarch64"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
console = { path = "../../../console" }
consts = { path = "../../../lib/consts"}
device_tree = { path = "../../../lib/device_tree" }
print = { path = "../../../lib/print" }
payloads = { path = "../../../../payloads"}

[dependencies.oreboot-cpu]
path = "../../../cpu"
features = ["armltd_cortex_a53"]

[dependencies.oreboot-drivers]
path = "../../../drivers"
features = ["uart_pl011"]
