[package]
name = "qemu-armv7"
version = "0.1.0"
authors = ["Ronald G. Minnich <rminnich@gmail.com>"]
edition = "2018"

[dependencies]
console = { path = "../../../console" }
cpu = { path = "../../../cpu/armltd/cortex-a9"}
device_tree = { path = "../../../lib/device_tree" }
model = { path = "../../../drivers/model" }
payloads = { path = "../../../../payloads"}
wrappers = { path = "../../../drivers/wrappers"}

[dependencies.uart]
path = "../../../drivers/uart"
features = ["pl011"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
