[package]
name = "qemu-armv7"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
console = { path = "../../../console" }
cpu = { path = "../../../cpu/armltd/cortex-a9"}
device_tree = { path = "../../../lib/device_tree" }
print = { path = "../../../lib/print" }
payloads = { path = "../../../../payloads"}

[dependencies.oreboot-drivers]
path = "../../../drivers"
features = ["uart_pl011"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
