[package]
name = "qemu-fsp"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
console = { path = "../../../console" }
fsp-qemu-sys = { path = "../../../vendorcode/fsp/qemu"}
fsp-common = { path = "../../../vendorcode/fsp/common"}
payloads = { path = "../../../../payloads"}
print = { path = "../../../lib/print" }
uefi = { path = "../../../lib/uefi"}

heapless = "0.4.x"
tock-registers = "0.7.0"
static-ref = "0.1.1"
postcard = "0.4.3"

[dependencies.oreboot-arch]
path = "../../../arch"
features = ["x86_64"]

[dependencies.oreboot-drivers]
path = "../../../drivers"
features = ["uart_i8250"]
