[package]
name = "qemu-fsp32"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
arch = { path = "../../../arch/x86/x86_64"}
console = { path = "../../../console" }
fsp-qemu32-sys = { path = "../../../vendorcode/fsp/qemu32" }
fsp-common = { path = "../../../vendorcode/fsp/common" }
model = { path = "../../../drivers/model" }
payloads = { path = "../../../../payloads"}
print = { path = "../../../lib/print" }
wrappers = { path = "../../../drivers/wrappers"}

static-ref = "0.1.1"
postcard = "0.4.3"

[dependencies.uart]
path = "../../../drivers/uart"
features = ["i8250"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
