[package]
name = "qemu-fsp32"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
console = { path = "../../../console" }
fsp-qemu32-sys = { path = "../../../vendorcode/fsp/qemu32" }
fsp-common = { path = "../../../vendorcode/fsp/common" }
payloads = { path = "../../../../payloads"}
print = { path = "../../../lib/print" }

static-ref = "0.1.1"
postcard = "0.4.3"

[dependencies.oreboot-arch]
path = "../../../arch"
features = ["x86_64"]

[dependencies.oreboot-drivers]
path = "../../../drivers"
features = ["uart_i8250"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
