[package]
name = "qemu-riscv"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
console = { path = "../../../console" }
print = { path = "../../../lib/print" }
payloads = { path = "../../../../payloads"}
sbi-qemu = { path = "./sbi" }

lz4_flex = { version = "0.9.2", default-features = false, features = ["checked-decode"] }
lzss = { version = "0.8", default-features = false }
heapless = "0.6.1"
tock-registers = "0.7.0"
static-ref = "0.1.1"

[dependencies.oreboot-arch]
path = "../../../arch"
features = ["riscv64"]

[dependencies.oreboot-soc]
path = "../../../soc"
features = ["sifive_fu540"]

[dependencies.oreboot-drivers]
path = "../../../drivers"
features = ["uart_ns16550"]
